fixed overflow for real this time

--- a/css/main.css
+++ b/css/main.css
@@ -286,7 +286,6 @@ li {
           flex-direction: column;
   padding: 4rem;
   position: relative;
-  overflow: hidden;
 }
 
 @media only screen and (max-width: 950px) {
@@ -434,7 +433,6 @@ li {
 .top .hero-info .hero-info__container .info--wrap {
   width: 100%;
   position: absolute;
-  right: -100%;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: right 0.25s ease-in-out, opacity 0.5s ease-in-out;
